<resources>
    <string name="app_name">2 Odds Maxbet</string>
    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">2 ODDS MAXBET</string>
    <string name="action_settings">Settings</string>
    <string name="app_id">ca-app-pub-5425147727091345~6303301938</string>
    <string name="menu_home">Home</string>
    <string name="menu_rate">RateUs</string>
    <string name="menu_share">Share</string>
    <string name="menu_contactus">ContactUs</string>
    <string name="interstitial_add">ca-app-pub-5425147727091345/1431727558</string>
    <string name="interstitial_dets">ca-app-pub-5425147727091345/4050684864</string>
    <string name="interstitial_file">ca-app-pub-5425147727091345/3036646786</string>
    <string name="interstitial_login">ca-app-pub-5425147727091345/4361143221</string>
    <string name="interstitial_test">ca-app-pub-3940256099942544/1033173712</string>
    <string name="terms_of_use">


    2 Odds MaxBets Terms, Conditions, and Notices AgreementBetween Customer and 2 odds bet.\n
    Welcome to the 2 OddsMaxbet android app. \n This app is provided solely to assist customers in gathering tee time information, determining the availability of odds, and for no other purposes. The terms "we", "us", "our" and "2oddsmaxbet.com" refer to limited partnership and/or our subsidiaries. The term "you" refers to the customer visiting the app and/or booking for odds time through us on this Website/app.
    This app is offered to you conditioned upon your acceptance without modification of all the terms, conditions, and notices set forth below (collectively, the "Agreement"). By accessing or using this Website in any manner, you agree to be bound by the Agreement. Please read the Agreement carefully. If you do not accept all of these terms and conditions, please do not use this app. Be sure to return to this page periodically to review the most current version of the Agreement.
        We reserve the right at any time, at our sole discretion, to change or otherwise modify the Agreement without prior notice, and your continued access or use of this Website/app signifies your acceptance of the updated or modified Agreement.
    Use of the Website  \n
    As a condition of your use of this Website, you warrant that \n
    1. you are at least 18 years of age,\n
    2. you possess the legal authority to create a binding legal obligation,\n
    3. you will use this Website in accordance with this Agreement,\n
    4. you will only use this Website to make legitimate reservations for
        you or for another person for whom you are legally authorized to act, \n
    5. all information supplied by you on this Website is true, accurate, current and complete, and  \n
    6. if you have a our account,
        you will safeguard your account information and will supervise
        and be completely responsible for any use of your account by anyone other than you.
        We retain the right at our sole discretion to deny access to anyone to this Website
        and the services we offer, at any time and for any reason, including, but not limited to, for violation of this Agreement. \n
    </string>
            <string name="nigerians">
                PAYMENT FOR NIGERIANS \n

                All members from Nigeria Kindly pay 9,000 GTBANK\n
                TIAMIYU OLAKUNLE \n
                0029133010\n
                After paying send your payment images/Bank slips to us  We will add you to the VIP once your payment is confirmed by our Team
            </string>
    <string name="accept">
        We accept payment from all other countries.. .\n

        PayPal\n
        Skrill \n
        Bitcoin\n
        Chipper cash \n
        Western Union \n
        Are all accepted just chat us we give u payment details \n
        Subscription last 30 days
    </string>
    <string name="kenyans">
        M-PESA PAYMENT FOR KENYANS \n

        Kindly Pay through M-PESA Using our till number  👉👉 590294 .Kindly follow the steps below \n \n
        a)Go to M-PESA\n
        b)Buy Goods and services \n
        c)Enter till our till number 590294\n
        d)Pay ksh 1,500\n\n
        After paying you will get a confirmation message.For instance ksh 1,500 paid MAKAVELI ENTERPRISE .\n
        forward that mpesa message through WhatsApp using our service number 👉👉<a href="https://wa.me/254723395234">+254723395234 </a>  with your names registered on Mpesa.
        We will automatically add you to the VIP once your payment is confirmed by our team.
    </string>
    <string name="template">
        JOIN VIP Today and receive winning games through the month
        once your are a member of the vip, you will be sent carefully selected tips with 0% chance of losing
        To join inbox 👉👉<a href="https://wa.me/254723395234"> +254723395234 </a>  with the words "I want to win"
TO PAY FOR THE VIP,  <B>PAY VIA MPESA TO  </B> using our till number number590294.follow the following steps\n
        a)Go to MPesa \n
        b) Buy goods and services \n
        c) Enter our till number 590294 \n
        d)pay 1500\n
        THEN FORWARD YOUR PAYMENT DETAILS TO US THROUGH WHATSAPP USING OUR SERVICE NUMBER  👉👉 +254723395234 FOR QUICK VIP ADDITION
CLICK SURE ODDS TO LEARN HOW THIS WORKS

CONFIRM THIS TICKET AS IT WAS POSTED YESTERDAY IN THE TELEGRAM GROUP \n
        <i>(For any query kindly contact the admin via whatsapp through 👉👉<a href="https://wa.me/254723395234">+254723395234 </a> or email us @ ngugijames54@gmail.com)</i> </string>
    <string name="Airtel">
        Our airtel customers from kenya are advised to use Mpesa but incase its inconvinient airtel money is still covinient.
        This includes gambler from zambia. \n
        Gamblers from other nations including USA, Europe, Australia, South Africa, Nigeria, Zambia and all eastern african countries are advised to pay via paypal.
        The whatsapp number shall be consindered for any queries or hence email us at our email.
    </string>
    <string name="faqs">
        The app admin is available 24/7 hence all enquires can be directed to him.
        For any other issues including recommedations and correction feel free to contact us.
    </string>
    <string name="todo">TODO</string>
    <string name="Advise">We ADVISED TO CHOOSE  NOT MORE THAN 3 GAMES IN ONE BET SLIP JUST SELECT 2 OR 3 GAMES AND MAKE A BET SLIP.DONT BE A GREEDY GAMBLER WHO WANTS TO WIN ALL AT ONCE! BE A RESPONSIBLE GAMBLER WITH INVESTMENTS.ITS MUCH SAFER and PROFITABLE TO WIN AT LEAST 3 OR 4 DAYS IN A WEEK NO MATTER HOW SMALL THE ODD IS, THAN LOOSING EVERYTHING.THEREFORE WE URGE ALL MEMBERS TO BET ONLY WITH MONEY YOU CAN AFFORD TO LOOSE.DO NOT BET WITH YOUR SCHOOL FEES, HOUSE RENT OR FAMILY SPECIAL FUNDS
FRIENDS DONT MISS OUT TODAYS SURE ODDS AS THEY WILL BE POSTED.
Registration for the 2 ODDSMAXBET vip group is ongoing friends, SERIOUS GAMBLERS are taking quick actions for the VIP group make sure your not being left out instead use the payment details below the table .Immediately you pay just send your payment proofs to us through WhatsApp using our service NUMBER +254723395234 for quick addition so you can access the VIP tickets.If you register for the 2 ODDS MAXBET now you will be receiving 2 or 3 of our VIP tickets for 35 days Our VIP team provides the fastest customer service.</string>
</resources>
