<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    >

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_vip"
            android:icon="@drawable/about_icon_link"
            android:title="Sure Odds" />
        <item
            android:id="@+id/nav_details"
            android:icon="@drawable/ic_menu_vip"
            android:title="Terms of use" />
        <item
            android:id="@+id/nav_invite"
            android:icon="@drawable/ic_menu_disclaimer"
            android:title="Disclaimer" />
        <item
            android:id="@+id/nav_contact"
            android:icon="@drawable/ic_menu_contact"
            android:title="@string/menu_contactus" />
    </group>

    <item android:title="others">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="Buy VIP" />
            <item
                android:id="@+id/nav_rate"
                android:icon="@drawable/ic_menu_rate"
                android:title="@string/menu_rate" />
        </menu>
    </item>

</menu>
